# assimpjs

./: CMakeLists.txt  README.md  package.json
assimpjs/src/: assimpjs.cpp  assimpjs.hpp
test/: test.js
